--- a/nicheVI.ipynb
+++ b/nicheVI.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "967ec7cb-2fc7-4b70-8026-59581b941a2e",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BrainAgingSpatialAtlas_MERFISH\tLiver_VIZGEN\n"
+      "BrainAgingSpatialAtlas_MERFISH\tnanostring_bis_finished_hotspot_densities.h5ad\n",
+      "Liver_VIZGEN\t\t\tspatialdata.ipynb\n"
      ]
     }
    ],
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "49746df0-fdce-4241-ba4f-ed417bf91ad1",
    "metadata": {},
    "outputs": [
@@ -1911,7 +1912,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
+   "id": "872b6891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_test = sc.read(\n",
+    "    \"data/lung_atlas.h5ad\",\n",
+    "    backup_url=\"https://figshare.com/ndownloader/files/24539942\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7265ca28",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'adata_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m adata_test\u001b[39m.\u001b[39mX \u001b[39m=\u001b[39m adata_test\u001b[39m.\u001b[39mlayers[\u001b[39m\"\u001b[39m\u001b[39mcounts\u001b[39m\u001b[39m\"\u001b[39m]  \u001b[39m# putting in the X matrtix the raw counts\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'adata_test' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "adata_test.X = adata_test.layers[\"counts\"]  # putting in the X matrtix the raw counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d1dbadee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">AnnData object with n_obs × n_vars = <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">32472</span> × <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15148</span>\n",
+       "    obs: <span style=\"color: #008000; text-decoration-color: #008000\">'dataset'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'location'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'nGene'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'nUMI'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'patientGroup'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'percent.mito'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'protocol'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'sanger_type'</span>, \n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">'size_factors'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'sampling_method'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'batch'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'cell_type'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'donor'</span>\n",
+       "    layers: <span style=\"color: #008000; text-decoration-color: #008000\">'counts'</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = \u001b[1;36m32472\u001b[0m × \u001b[1;36m15148\u001b[0m\n",
+       "    obs: \u001b[32m'dataset'\u001b[0m, \u001b[32m'location'\u001b[0m, \u001b[32m'nGene'\u001b[0m, \u001b[32m'nUMI'\u001b[0m, \u001b[32m'patientGroup'\u001b[0m, \u001b[32m'percent.mito'\u001b[0m, \u001b[32m'protocol'\u001b[0m, \u001b[32m'sanger_type'\u001b[0m, \n",
+       "\u001b[32m'size_factors'\u001b[0m, \u001b[32m'sampling_method'\u001b[0m, \u001b[32m'batch'\u001b[0m, \u001b[32m'cell_type'\u001b[0m, \u001b[32m'donor'\u001b[0m\n",
+       "    layers: \u001b[32m'counts'\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(adata_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "4b79569e",
    "metadata": {},
    "outputs": [],
@@ -1920,32 +1986,32 @@
     "    scvi.settings.seed = seed\n",
     "\n",
     "    scvi.model.SCVI.setup_anndata(\n",
-    "        adata,\n",
+    "        adata_test,\n",
     "        layer=\"counts\",\n",
-    "        batch_key=\"donor_id\",\n",
+    "        batch_key=\"donor\",\n",
     "    )\n",
     "\n",
     "    scvivae = scvi.model.SCVI(\n",
-    "        adata,\n",
-    "        gene_likelihood=\"poisson\",\n",
+    "        adata_test,\n",
+    "        gene_likelihood=\"nb\",\n",
     "        n_layers=1,\n",
     "        n_latent=10,\n",
     "    )\n",
     "\n",
     "    scvivae.train(\n",
-    "        max_epochs=20,\n",
+    "        max_epochs=150,\n",
     "        train_size=0.8,\n",
     "        validation_size=0.2,\n",
     "        plan_kwargs=dict(n_epochs_kl_warmup=80, weight_decay=1e-3),\n",
     "        early_stopping=True,\n",
     "    )\n",
     "\n",
-    "    adata.obsm[\"X_scVI_seed_\" + str(seed)] = scvivae.get_latent_representation()"
+    "    adata_test.obsm[\"X_scVI_seed_\" + str(seed)] = scvivae.get_latent_representation()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "2e43cf09",
    "metadata": {},
    "outputs": [
@@ -1953,7 +2019,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Global seed set to 56\n",
+      "Global seed set to 50\n",
+      "/home/nathanlevy/spatial-scvi/scvi/data/fields/_base_field.py:64: UserWarning: adata.layers[counts] does not contain unnormalized count data. Are you sure this is what you want?\n",
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
@@ -1966,34 +2033,164 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3/20:  10%|█         | 2/20 [00:06<01:00,  3.39s/it, v_num=1, train_loss_step=190, train_loss_epoch=180]"
+      "Epoch 1/150:   0%|          | 0/150 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 20/20: 100%|██████████| 20/20 [01:09<00:00,  3.58s/it, v_num=1, train_loss_step=188, train_loss_epoch=180]"
+      "Epoch 150/150: 100%|██████████| 150/150 [04:22<00:00,  1.76s/it, v_num=1, train_loss_step=3.8e+3, train_loss_epoch=3.93e+3] "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=20` reached.\n"
+      "`Trainer.fit` stopped: `max_epochs=150` reached.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 20/20: 100%|██████████| 20/20 [01:09<00:00,  3.50s/it, v_num=1, train_loss_step=188, train_loss_epoch=180]\n"
+      "Epoch 150/150: 100%|██████████| 150/150 [04:22<00:00,  1.75s/it, v_num=1, train_loss_step=3.8e+3, train_loss_epoch=3.93e+3]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 56\n",
+      "/home/nathanlevy/spatial-scvi/scvi/data/fields/_base_field.py:64: UserWarning: adata.layers[counts] does not contain unnormalized count data. Are you sure this is what you want?\n",
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "You are using a CUDA device ('NVIDIA GeForce RTX 3090') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 150/150: 100%|██████████| 150/150 [04:25<00:00,  1.78s/it, v_num=1, train_loss_step=3.89e+3, train_loss_epoch=3.94e+3]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=150` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 150/150: 100%|██████████| 150/150 [04:25<00:00,  1.77s/it, v_num=1, train_loss_step=3.89e+3, train_loss_epoch=3.94e+3]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 58\n",
+      "/home/nathanlevy/spatial-scvi/scvi/data/fields/_base_field.py:64: UserWarning: adata.layers[counts] does not contain unnormalized count data. Are you sure this is what you want?\n",
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "You are using a CUDA device ('NVIDIA GeForce RTX 3090') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 150/150: 100%|██████████| 150/150 [04:24<00:00,  1.76s/it, v_num=1, train_loss_step=3.85e+3, train_loss_epoch=3.94e+3]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=150` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 150/150: 100%|██████████| 150/150 [04:24<00:00,  1.76s/it, v_num=1, train_loss_step=3.85e+3, train_loss_epoch=3.94e+3]\n"
      ]
     }
    ],
    "source": [
-    "# scvi_pipeline(50)\n",
-    "scvi_pipeline(56)"
+    "seed_list = [50, 56, 58]\n",
+    "\n",
+    "scvi_pipeline(seed_list[0])\n",
+    "scvi_pipeline(seed_list[1])\n",
+    "scvi_pipeline(seed_list[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "28de75c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing neighbors:   0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing neighbors: 100%|██████████| 3/3 [00:52<00:00, 17.60s/it]\n",
+      "Embeddings: 100%|\u001b[32m██████████\u001b[0m| 3/3 [00:40<00:00, 13.45s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedding_obsm_keys = [\"X_scVI_seed_\" + str(seed) for seed in seed_list]\n",
+    "\n",
+    "bm = Benchmarker(\n",
+    "    adata_test,\n",
+    "    batch_key=\"donor\",\n",
+    "    label_key=\"cell_type\",\n",
+    "    embedding_obsm_keys=embedding_obsm_keys,\n",
+    "    n_jobs=6,\n",
+    ")\n",
+    "bm.benchmark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "19be4fe6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bm\u001b[39m.\u001b[39mplot_results_table(min_max_scale\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bm' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "bm.plot_results_table(min_max_scale=False)"
    ]
   },
   {
@@ -3331,9 +3528,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "phenospace23",
+   "display_name": "phenospace_23",
    "language": "python",
-   "name": "phenospace23"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
