--- a/nicheVI_workflow.ipynb
+++ b/nicheVI_workflow.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "46a35e09-7108-422e-9ddf-415b2cc49ef9",
    "metadata": {},
    "outputs": [],
@@ -22,24 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "2f88d7c2-f947-44ce-a608-047a3ed89044",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nathanlevy/mambaforge/envs/phenospace_23/lib/python3.11/site-packages/umap/distances.py:1063: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
-      "/home/nathanlevy/mambaforge/envs/phenospace_23/lib/python3.11/site-packages/umap/distances.py:1071: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
-      "/home/nathanlevy/mambaforge/envs/phenospace_23/lib/python3.11/site-packages/umap/distances.py:1086: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
-      "/home/nathanlevy/mambaforge/envs/phenospace_23/lib/python3.11/site-packages/umap/umap_.py:660: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
     "import anndata as ad\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -54,12 +41,12 @@
     "import scanpy as sc\n",
     "\n",
     "from scib_metrics.benchmark import Benchmarker\n",
-    "from phenospace.results_analysis import SpatialAnalysis"
+    "from scvi.strip_metrics import SpatialAnalysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "94a1c7f9",
    "metadata": {},
    "outputs": [
@@ -77,7 +64,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
+   "id": "3c3cc5d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scvi.data import synthetic_iid\n",
+    "\n",
+    "adatas = synthetic_iid(\n",
+    "        batch_size=10,\n",
+    "        n_genes=100,\n",
+    "        n_proteins=0,\n",
+    "        n_regions=0,\n",
+    "        n_batches=2,\n",
+    "        n_labels=3,\n",
+    "        dropout_ratio=0.5,\n",
+    "        coordinates_key=\"coordinates\",\n",
+    "        sparse_format=None,\n",
+    "        return_mudata=False,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c74d1e21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 20 × 100\n",
+       "    obs: 'batch', 'labels'\n",
+       "    obsm: 'coordinates'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adatas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1655b720",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     batch_0\n",
+       "1     batch_0\n",
+       "2     batch_0\n",
+       "3     batch_0\n",
+       "4     batch_0\n",
+       "5     batch_0\n",
+       "6     batch_0\n",
+       "7     batch_0\n",
+       "8     batch_0\n",
+       "9     batch_0\n",
+       "10    batch_1\n",
+       "11    batch_1\n",
+       "12    batch_1\n",
+       "13    batch_1\n",
+       "14    batch_1\n",
+       "15    batch_1\n",
+       "16    batch_1\n",
+       "17    batch_1\n",
+       "18    batch_1\n",
+       "19    batch_1\n",
+       "Name: batch, dtype: category\n",
+       "Categories (2, object): ['batch_0', 'batch_1']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adatas.obs.batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "967ec7cb-2fc7-4b70-8026-59581b941a2e",
    "metadata": {},
    "outputs": [
@@ -85,8 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BrainAgingSpatialAtlas_MERFISH\tnanostring_bis_finished_hotspot_densities.h5ad\n",
-      "Liver_VIZGEN\t\t\tspatialdata.ipynb\n"
+      "ls: cannot access /home/nathanlevy/Data/: No such file or directory\n"
      ]
     }
    ],
@@ -129,22 +203,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "49746df0-fdce-4241-ba4f-ed417bf91ad1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">adata_scvi_merfish4w\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "adata_scvi_merfish4w\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'data_dirs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# data_dir = \"/home/nathanlevy/Data/BrainAgingSpatialAtlas_MERFISH/\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# data_file = \"adata_scvi_merfish4w.h5ad\"\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m data_dir, data_file \u001b[39m=\u001b[39m data_dirs[\u001b[39m\"\u001b[39m\u001b[39mMERFISH_Brain\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      6\u001b[0m data_file_name \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39msplitext(data_file)[\u001b[39m0\u001b[39m]\n\u001b[1;32m      7\u001b[0m \u001b[39mprint\u001b[39m(data_file_name)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_dirs' is not defined"
+     ]
     }
    ],
    "source": [
