--- a/nicheVI_convergence.ipynb
+++ b/nicheVI_convergence.ipynb
@@ -33,21 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'phenospace'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/labs/nyosef/nathanl/spatial-scvi/nicheVI_convergence.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2268676e31352e77657861632e7765697a6d616e6e2e61632e696c222c2275736572223a226e617468616e6c227d/home/labs/nyosef/nathanl/spatial-scvi/nicheVI_convergence.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mscanpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msc\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2268676e31352e77657861632e7765697a6d616e6e2e61632e696c222c2275736572223a226e617468616e6c227d/home/labs/nyosef/nathanl/spatial-scvi/nicheVI_convergence.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscib_metrics\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mbenchmark\u001b[39;00m \u001b[39mimport\u001b[39;00m Benchmarker\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2268676e31352e77657861632e7765697a6d616e6e2e61632e696c222c2275736572223a226e617468616e6c227d/home/labs/nyosef/nathanl/spatial-scvi/nicheVI_convergence.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mphenospace\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mresults_analysis\u001b[39;00m \u001b[39mimport\u001b[39;00m spatial_latent_analysis, SpatialAnalysis\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'phenospace'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import anndata as ad\n",
     "import numpy as np\n",
@@ -63,7 +51,71 @@
     "import scanpy as sc\n",
     "\n",
     "from scib_metrics.benchmark import Benchmarker\n",
-    "from phenospace.results_analysis import spatial_latent_analysis, SpatialAnalysis"
+    "from scib_metrics.nearest_neighbors import NeighborsOutput, pynndescent\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "from sklearn.neighbors import kneighbors_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.random.rand(1000000, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neigh_output = pynndescent(data, n_neighbors=20, random_state=0, n_jobs=-1)\n",
+    "indices, distances = neigh_output.indices, neigh_output.distances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Create a NearestNeighbors object\n",
+    "knn = NearestNeighbors(n_neighbors=20)\n",
+    "\n",
+    "# Fit the kNN model to the points\n",
+    "knn.fit(data)\n",
+    "\n",
+    "# Find the indices of the kNN for each point\n",
+    "distances, indices = knn.kneighbors(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[     0, 999494, 422439, ..., 165187, 506474, 727059],\n",
+       "       [     1, 255749, 316407, ..., 674714, 909373, 793839],\n",
+       "       [     2, 552610, 335931, ..., 815499,  51839, 437059],\n",
+       "       ...,\n",
+       "       [999997, 857226, 996280, ..., 279194, 427868, 848256],\n",
+       "       [999998, 494435, 211988, ..., 300987, 988852, 199841],\n",
+       "       [999999, 368297, 707029, ..., 195512, 246057,  64814]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices"
    ]
   },
   {
@@ -80,39 +132,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/nathanlevy/spatial-scvi/scvi\n"
+      "total 16G\n",
+      "-rw-r----- 1 nathanl nyosef-wx-grp 7.6G Oct  3 12:34 liver-joint-scvi3.h5ad\n",
+      "-rwxr-x--- 1 nathanl nyosef-wx-grp 7.6G Oct  5 15:12 liver-joint-scvi3-annotated.h5ad\n"
      ]
     }
    ],
    "source": [
-    "!pwd"
+    "!ls -lrth /home/labs/nyosef/Collaboration/SpatialDatasets/vizgen/mouse_liver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_test = sc.read(\n",
+    "    \"/home/labs/nyosef/Collaboration/SpatialDatasets/vizgen/mouse_liver/liver-joint-scvi3-annotated.h5ad\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# subset the data to only include the samples we want to analyze: Liver1Slice1 and Liver2Slice1\n",
+    "adata_test = adata_test[\n",
+    "    adata_test.obs[\"sample\"].isin([\"Liver1Slice1\"])\n",
+    "].copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 395215 × 347\n",
+       "    obs: 'fov', 'volume', 'center_x', 'center_y', 'min_x', 'max_x', 'min_y', 'max_y', 'sample', 'biopsy', '_scvi_batch', '_scvi_labels', 'leiden_scVI', '_scvi_raw_norm_scaling', 'cell_total', 'log1p_cell_total', 'leiden_scVI_finer', 'leiden_scVI_finer_still', 'leiden_scVI_only_vascular_endothelial', 'endothelial_only', 'cell_types', 'annotation'\n",
+       "    var: 'n_counts'\n",
+       "    uns: '_scvi_manager_uuid', '_scvi_uuid', 'annotation_colors', 'biopsy_colors', 'cell_types_colors', 'dendrogram_leiden_scVI', 'endothelial_only_colors', 'leiden', 'leiden_scVI_colors', 'leiden_scVI_finer_still_colors', 'leiden_scVI_only_vascular_endothelial_colors', 'log1p', 'neighbors', 'pca', 'sample_colors', 'umap'\n",
+       "    obsm: 'X_pca', 'X_scVI', 'X_umap', '_scvi_extra_categorical_covs', 'centroids'\n",
+       "    varm: 'PCs'\n",
+       "    layers: 'counts', 'scvi_normalized'\n",
+       "    obsp: 'connectivities', 'distances'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "adata_test = sc.read(\n",
-    "    \"/home/nathanlevy/Data/Liver_VIZGEN/liver-joint-scvi3.h5ad\",\n",
-    ")"
+    "adata_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_test.X = adata_test.layers[\"counts\"]  # putting in the X matrtix the raw counts"
+    "sc.pp.neighbors(adata_test[:100], n_neighbors=20, use_rep=\"X_scVI\", copy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.4461924 , 0.        , 0.24496667],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.04107589,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.06390359,\n",
+       "        1.        , 0.        , 0.        , 0.        , 0.        ]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connectivity.obsp['connectivities'][:4,:10].toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.34941134, 0.        , 0.        , 0.        ,\n",
+       "        0.13235049, 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.34941134, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.16055053, 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.4345411 , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.4345411 , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata_test.obsp[\"connectivities\"][:4,:10].toarray()  #.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latent_k_nn = kneighbors_graph(\n",
+    "                    adata_test.obsm['X_scVI'],\n",
+    "                    n_neighbors=20,\n",
+    "                    mode=\"connectivity\",\n",
+    "                    n_jobs=-1,\n",
+    "                )\n",
+    "\n",
+    "lknn_indices = latent_k_nn.indices\n",
+    "lknn_indptr = latent_k_nn.indptr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([127423,  61173, 383716, ..., 300245, 169557, 176979], dtype=int32)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latent_k_nn.indices"
    ]
   },
   {
@@ -187,18 +373,6 @@
    ],
    "source": [
     "adata_test.obs[\"sample\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# subset the data to only include the samples we want to analyze: Liver1Slice1 and Liver2Slice1\n",
-    "adata_test = adata_test[\n",
-    "    adata_test.obs[\"sample\"].isin([\"Liver1Slice1\", \"Liver2Slice1\"])\n",
-    "].copy()"
    ]
   },
   {
