--- a/nicheVI_convergence.ipynb
+++ b/nicheVI_convergence.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,129 @@
     "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
     "from sklearn.neighbors import kneighbors_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial.distance import cdist\n",
+    "from scvi.strip_metrics import SpatialAnalysis, compute_similarity\n",
+    "\n",
+    "# random matrix of shape 2x2\n",
+    "np.random.seed(0)\n",
+    "A = np.random.rand(2)\n",
+    "B = np.random.rand(2,4, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.1786471 , 0.14306129, 0.20869372, 0.53118409]),\n",
+       " array([0.30612356, 0.2112843 , 0.7891329 , 0.54148195])]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "\n",
+    "from joblib import Parallel, delayed\n",
+    "\n",
+    "Parallel(n_jobs=-1)(delayed(compute_similarity)(A,B[i]) for i in range(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.5488135</span>  <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.71518937</span><span style=\"font-weight: bold\">]]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1m[\u001b[0m\u001b[1;36m0.5488135\u001b[0m  \u001b[1;36m0.71518937\u001b[0m\u001b[1m]\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.60276338</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.54488318</span><span style=\"font-weight: bold\">]</span>\n",
+       " <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.4236548</span>  <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.64589411</span><span style=\"font-weight: bold\">]</span>\n",
+       " <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.43758721</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.891773</span>  <span style=\"font-weight: bold\">]</span>\n",
+       " <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.96366276</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.38344152</span><span style=\"font-weight: bold\">]]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1m[\u001b[0m\u001b[1;36m0.60276338\u001b[0m \u001b[1;36m0.54488318\u001b[0m\u001b[1m]\u001b[0m\n",
+       " \u001b[1m[\u001b[0m\u001b[1;36m0.4236548\u001b[0m  \u001b[1;36m0.64589411\u001b[0m\u001b[1m]\u001b[0m\n",
+       " \u001b[1m[\u001b[0m\u001b[1;36m0.43758721\u001b[0m \u001b[1;36m0.891773\u001b[0m  \u001b[1m]\u001b[0m\n",
+       " \u001b[1m[\u001b[0m\u001b[1;36m0.96366276\u001b[0m \u001b[1;36m0.38344152\u001b[0m\u001b[1m]\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(A)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1786471 , 0.14306129, 0.20869372, 0.53118409])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(A - B, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1786471 , 0.14306129, 0.20869372, 0.53118409])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_similarity(A, B, measure=\"euclidean\")"
    ]
   },
   {
@@ -167,9 +290,7 @@
    "outputs": [],
    "source": [
     "# subset the data to only include the samples we want to analyze: Liver1Slice1 and Liver2Slice1\n",
-    "adata_test = adata_test[\n",
-    "    adata_test.obs[\"sample\"].isin([\"Liver1Slice1\"])\n",
-    "].copy()"
+    "adata_test = adata_test[adata_test.obs[\"sample\"].isin([\"Liver1Slice1\"])].copy()"
    ]
   },
   {
@@ -233,7 +354,7 @@
     }
    ],
    "source": [
-    "connectivity.obsp['connectivities'][:4,:10].toarray()"
+    "connectivity.obsp[\"connectivities\"][:4, :10].toarray()"
    ]
   },
   {
@@ -261,7 +382,7 @@
     }
    ],
    "source": [
-    "adata_test.obsp[\"connectivities\"][:4,:10].toarray()  #.sum()"
+    "adata_test.obsp[\"connectivities\"][:4, :10].toarray()  # .sum()"
    ]
   },
   {
@@ -271,11 +392,11 @@
    "outputs": [],
    "source": [
     "latent_k_nn = kneighbors_graph(\n",
-    "                    adata_test.obsm['X_scVI'],\n",
-    "                    n_neighbors=20,\n",
-    "                    mode=\"connectivity\",\n",
-    "                    n_jobs=-1,\n",
-    "                )\n",
+    "    adata_test.obsm[\"X_scVI\"],\n",
+    "    n_neighbors=20,\n",
+    "    mode=\"connectivity\",\n",
+    "    n_jobs=-1,\n",
+    ")\n",
     "\n",
     "lknn_indices = latent_k_nn.indices\n",
     "lknn_indptr = latent_k_nn.indptr"
