--- a/nicheVI_convergence.ipynb
+++ b/nicheVI_convergence.ipynb
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Tuple, Dict, Any, Callable, Optional, Union"
+    "from typing import List, Tuple, Dict, Any, Callable, Optional, Union, NamedTuple, Literal"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SET_OF_METRICS = [\"distance\", \"similarity\", \"latent_overlap\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "typing.Literal['distance', 'similarity', 'latent_overlap']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Literal[*SET_OF_METRICS]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "typing.Literal['distance', 'similarity', 'latent_overlap']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Literal[\"distance\", \"similarity\", \"latent_overlap\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +133,7 @@
        " array([0.30612356, 0.2112843 , 0.7891329 , 0.54148195])]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,17 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.5488135</span>  <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.71518937</span><span style=\"font-weight: bold\">]]</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.5488135</span>  <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.71518937</span><span style=\"font-weight: bold\">]</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m[\u001b[0m\u001b[1m[\u001b[0m\u001b[1;36m0.5488135\u001b[0m  \u001b[1;36m0.71518937\u001b[0m\u001b[1m]\u001b[0m\u001b[1m]\u001b[0m\n"
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.5488135\u001b[0m  \u001b[1;36m0.71518937\u001b[0m\u001b[1m]\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -118,17 +167,27 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.60276338</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.54488318</span><span style=\"font-weight: bold\">]</span>\n",
-       " <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.4236548</span>  <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.64589411</span><span style=\"font-weight: bold\">]</span>\n",
-       " <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.43758721</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.891773</span>  <span style=\"font-weight: bold\">]</span>\n",
-       " <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.96366276</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.38344152</span><span style=\"font-weight: bold\">]]</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[[[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.60276338</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.54488318</span><span style=\"font-weight: bold\">]</span>\n",
+       "  <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.4236548</span>  <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.64589411</span><span style=\"font-weight: bold\">]</span>\n",
+       "  <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.43758721</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.891773</span>  <span style=\"font-weight: bold\">]</span>\n",
+       "  <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.96366276</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.38344152</span><span style=\"font-weight: bold\">]]</span>\n",
+       "\n",
+       " <span style=\"font-weight: bold\">[[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.79172504</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.52889492</span><span style=\"font-weight: bold\">]</span>\n",
+       "  <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.56804456</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.92559664</span><span style=\"font-weight: bold\">]</span>\n",
+       "  <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.07103606</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0871293</span> <span style=\"font-weight: bold\">]</span>\n",
+       "  <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0202184</span>  <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.83261985</span><span style=\"font-weight: bold\">]]]</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m[\u001b[0m\u001b[1m[\u001b[0m\u001b[1;36m0.60276338\u001b[0m \u001b[1;36m0.54488318\u001b[0m\u001b[1m]\u001b[0m\n",
-       " \u001b[1m[\u001b[0m\u001b[1;36m0.4236548\u001b[0m  \u001b[1;36m0.64589411\u001b[0m\u001b[1m]\u001b[0m\n",
-       " \u001b[1m[\u001b[0m\u001b[1;36m0.43758721\u001b[0m \u001b[1;36m0.891773\u001b[0m  \u001b[1m]\u001b[0m\n",
-       " \u001b[1m[\u001b[0m\u001b[1;36m0.96366276\u001b[0m \u001b[1;36m0.38344152\u001b[0m\u001b[1m]\u001b[0m\u001b[1m]\u001b[0m\n"
+       "\u001b[1m[\u001b[0m\u001b[1m[\u001b[0m\u001b[1m[\u001b[0m\u001b[1;36m0.60276338\u001b[0m \u001b[1;36m0.54488318\u001b[0m\u001b[1m]\u001b[0m\n",
+       "  \u001b[1m[\u001b[0m\u001b[1;36m0.4236548\u001b[0m  \u001b[1;36m0.64589411\u001b[0m\u001b[1m]\u001b[0m\n",
+       "  \u001b[1m[\u001b[0m\u001b[1;36m0.43758721\u001b[0m \u001b[1;36m0.891773\u001b[0m  \u001b[1m]\u001b[0m\n",
+       "  \u001b[1m[\u001b[0m\u001b[1;36m0.96366276\u001b[0m \u001b[1;36m0.38344152\u001b[0m\u001b[1m]\u001b[0m\u001b[1m]\u001b[0m\n",
+       "\n",
+       " \u001b[1m[\u001b[0m\u001b[1m[\u001b[0m\u001b[1;36m0.79172504\u001b[0m \u001b[1;36m0.52889492\u001b[0m\u001b[1m]\u001b[0m\n",
+       "  \u001b[1m[\u001b[0m\u001b[1;36m0.56804456\u001b[0m \u001b[1;36m0.92559664\u001b[0m\u001b[1m]\u001b[0m\n",
+       "  \u001b[1m[\u001b[0m\u001b[1;36m0.07103606\u001b[0m \u001b[1;36m0.0871293\u001b[0m \u001b[1m]\u001b[0m\n",
+       "  \u001b[1m[\u001b[0m\u001b[1;36m0.0202184\u001b[0m  \u001b[1;36m0.83261985\u001b[0m\u001b[1m]\u001b[0m\u001b[1m]\u001b[0m\u001b[1m]\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -142,42 +201,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.1786471 , 0.14306129, 0.20869372, 0.53118409])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linalg.norm(A - B, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">Website</span><span style=\"font-weight: bold\">(</span><span style=\"color: #808000; text-decoration-color: #808000\">name</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'GeeksforGeeks2'</span>, <span style=\"color: #808000; text-decoration-color: #808000\">url</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'geeksforgeeks.fr'</span>, <span style=\"color: #808000; text-decoration-color: #808000\">rating</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">10</span><span style=\"font-weight: bold\">)</span>\n",
+       "</pre>\n"
+      ],
       "text/plain": [
-       "array([0.1786471 , 0.14306129, 0.20869372, 0.53118409])"
+       "\u001b[1;35mWebsite\u001b[0m\u001b[1m(\u001b[0m\u001b[33mname\u001b[0m=\u001b[32m'GeeksforGeeks2'\u001b[0m, \u001b[33murl\u001b[0m=\u001b[32m'geeksforgeeks.fr'\u001b[0m, \u001b[33mrating\u001b[0m=\u001b[1;36m10\u001b[0m\u001b[1m)\u001b[0m\n"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "compute_similarity(A, B, measure=\"euclidean\")"
+    "# creating a class \n",
+    "class Website(NamedTuple): \n",
+    "    name: str = 'GeeksforGeeks'\n",
+    "    url: str = 'www.geeksforgeeks.org'\n",
+    "    rating: int = 10\n",
+    "  \n",
+    "# creating a NamedTuple \n",
+    "website1 = Website('GeeksforGeeks2', \n",
+    "                   'geeksforgeeks.fr', \n",
+    "                   ) \n",
+    "\n",
+    "print(website1)"
    ]
   },
   {
