--- a/ground_truth_niches.ipynb
+++ b/ground_truth_niches.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        " 12: 'cell'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "        0.        ]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "[123632 rows x 13 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,18 +665,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1584113/2647571555.py:14: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2368268/3167995157.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  adata.obs.niche_type[adata.obsm[\"neighborhood_composition\"][:, cell_type_index] > treshold] = cell_type\n"
+      "  adata.obs.niche_type[\n"
      ]
     }
    ],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "['neuron', 'unknown', 'oligodendrocyte', 'astrocyte', 'medium spiny neuron']"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,25 +1495,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2159157942.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[222], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    df.loc[(:, 'mean'), :] = 1\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.loc[(:, 'mean'), :] = 1\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 231,
    "metadata": {},
    "outputs": [
@@ -2070,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,34 +2060,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.14814815, 0.11111111, 0.55555556, ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.18181818, 0.09090909, 0.54545455, ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.13793103, 0.13793103, 0.51724138, ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       ...,\n",
-       "       [0.4       , 0.05      , 0.1       , ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.25      , 0.2       , 0.1       , ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.2173913 , 0.17391304, 0.04347826, ..., 0.        , 0.        ,\n",
-       "        0.        ]])"
+       "(13,)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata.obsm[\"neighborhood_composition\"]"
+    "entropy(neighborhood_composition.loc[0], neighborhood_composition)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entropy(neighborhood_composition)"
    ]
   }
  ],
